# spectrum

./: .flutter-plugins-dependencies  .gitignore  .metadata  README.md  analysis_options.yaml  build.yaml  frb.yml  pubspec.yaml
.dart-tool/: CLIENT_ID  dart-flutter-telemetry-session.json
.dart_tool/: package_config.json  package_graph.json
.dart_tool/build_resolvers/: sdk.sum  sdk.sum.deps
.dart_tool/dartpad/: web_plugin_registrant.dart
.dart_tool/extension_discovery/: devtools.json
.dart_tool/flutter_build/: dart_plugin_registrant.dart
.github/workflows/: build_windows.yml  ios_build.yml
android/: build.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
backend/: .env  package.json
backend-rust/: Cargo.toml  build_errors.txt
backend-rust/src/: db.rs  jam.rs  main.rs  models.rs
backend-rust/src/routes/: isrc.rs  mod.rs  stream.rs
backend/src/: index.js
ios/: Podfile
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: app.dart  main.dart
linux/: CMakeLists.txt
linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
linux/runner/: my_application.cc
rust/: Cargo.toml  scan_results.txt
rust/src/: frb_generated.rs
rust/src/api/: cache.rs  cache.rs.bak  dsp.rs  dsp.rs.bak  image_processor.rs  library.rs  loudness.rs  lyrics.rs  metadata.rs  metadata.rs.bak  mod.rs  models.rs  resolver.rs  resolver.rs.bak  search.rs  simple.rs  spotify.rs  visualizer.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
test/: widget_test.dart
web/: index.html  manifest.json
(+373 files in other folders)
