[package]
name = "rust_lib_spectrum"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.7.0"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
tracing = "0.1"
regex = "1.9"
openssl = { version = "0.10", features = ["vendored"] }
anyhow = "1.0.102"
strsim = "0.11"
rustfft = "6.4.1"
image = "0.25.10"
lofty = "0.24.0"
rayon = "1.12.0"
palette = "0.7.6"
parking_lot = "0.12.5"
walkdir = "2.5.0"
once_cell = "1.21.4"
bs1770 = "1.0.0"
symphonia = { version = "0.5.5", features = ["all"] }
cpal = "0.15.3"
chrono = "0.4"
